--- a/src/ros2_fundamentals_examples/CMakeLists.txt
+++ b/src/ros2_fundamentals_examples/CMakeLists.txt
@@ -66,15 +66,22 @@ install(
 # errors, style issues, and other discrepancies that do not adhere to
 # specified coding standards or best practices.
 if(BUILD_TESTING)
-  find_package(ament_lint_auto REQUIRED)
+  # find_package(ament_lint_auto REQUIRED)
+  find_package(ament_cmake_gtest REQUIRED)
   # the following line skips the linter which checks for copyrights
   # comment the line when a copyright and license is added to all source files
-  set(ament_cmake_copyright_FOUND TRUE)
+  # set(ament_cmake_copyright_FOUND TRUE)
   # the following line skips cpplint (only works in a git repo)
   # comment the line when this package is in a git repo and when
   # a copyright and license is added to all source files
-  set(ament_cmake_cpplint_FOUND TRUE)
-  ament_lint_auto_find_test_dependencies()
+  # set(ament_cmake_cpplint_FOUND TRUE)
+  # ament_lint_auto_find_test_dependencies()
+
+  #C++ tests
+  ament_add_gtest(cpp_minimal_publisher_test gtests/test_publisher.cpp)
+
+  #Add dependencies for the C++ test executable
+  ament_target_dependencies(cpp_minimal_publisher_test ${dependencies})
 endif()
 
 # Used to export include directories of a package so that they can be easily
